--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/txtValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="한성민"
+    <ImageView
+        android:id="@+id/imgDice"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:textColor="#009688"
         android:textSize="60sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,9 +23,9 @@
         android:id="@+id/btnOK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
         android:layout_marginTop="24dp"
         android:text="확인"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtValue" />
+        app:layout_constraintTop_toBottomOf="@+id/imgDice" />
 </androidx.constraintlayout.widget.ConstraintLayout>
